@@ -1,6 +1,10 @@
 Changelog for GEMC
 ==================
 
+7/22/16
+ - fixed CATCH option for detector factory
+ - for cad model, reading cad.gxml for new volume attributes
+
 7/21/16
  - finalized CAD factory
  - added check on file existence for GDML factory
